[package]
name = "gc-adapter"
version = "0.1.0"
edition = "2018"
license = "GPL-2.0-or-later"

[dependencies]
bitflags = "1.2"
itertools = "0.10"
native-windows-derive = "1.0"
native-windows-gui = "1.0"
parking_lot = "0.11"
rusb = "0.8"
rust-ini = "0.17"
vigem = { path = "vigem" }
winapi = { version = "0.3", features = ["playsoundapi", "winuser"] }

[build-dependencies]
winres = "0.1.11"
