[package]
name = "gc-x"
version = "0.1.0"
edition = "2018"
license = "GPL-2.0-or-later"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bitflags = "1.2"
itertools = "0.10"
native-windows-derive = "1.0"
native-windows-gui = "1.0"
open = "2.0"
parking_lot = "0.11"
rusb = "0.8"
rust-ini = "0.17"
vigem = { path = "vigem" }
winapi = { version = "0.3", features = ["playsoundapi", "winuser"] }

[build-dependencies]
time = "0.3"
winres = "0.1.11"
