[package]
name = "gc-x"
version = "0.2.0"
edition = "2024"
license = "GPL-2.0-or-later"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bitflags = "2.9"
itertools = "0.13"
native-windows-derive = "1.0"
native-windows-gui = "1.0"
open = "5.3"
parking_lot = "0.12"
rusb = "0.9"
rust-ini = "0.21"
vigem = { path = "vigem" }
winapi = { version = "0.3", features = ["playsoundapi", "winuser"] }

[build-dependencies]
time = "0.3"
tauri-winres = "0.3.0"
